--- a/eda.ipynb
+++ b/eda.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6e177ee3",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# --- 8. Deeper Evaluation: Confusion Matrix ---\n",
+    "# --- Deeper Evaluation: Confusion Matrix ---\n",
     "print(\"Generating the confusion matrix...\")\n",
     "\n",
     "\n",
